# bitcoins

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  FRAMEWORK-README.txt  LICENSE.txt  README.txt  open_apidoc.sh  run_cmake.sh
assignment-document/: README.txt
blockchain/: CMakeLists.txt  attack.cpp  attack.h  blockchain.cpp  blockchain.h  ecclib-glue.cpp  ecclib-glue.h  ecdsa.cpp  ecdsa.h  empty.txt  io.cpp  io.h  main.cpp  merkletree.cpp  merkletree.h  transaction.h
blockchain/challenges/: attacker-g41.priv.sol  attacker-g41.pub.sol  blockchain.xz
blockchain/tests/: CMakeLists.txt  blockchain.cpp  merkletree.cpp
cmake/: CheckCPUID.cmake  FindCheck.cmake  check-rdtscp.c  doxygenSupport.cmake  run_with_stdin_pipe.sh
doc/: template.doxy.in
ecclib/: CMakeLists.txt  types.h
ecclib/bi/: bi.h  bi_gen.c  bi_gen.h
ecclib/eccp/: eccp.h  eccp_affine.c  eccp_affine.h  eccp_jacobian.c  eccp_jacobian.h
ecclib/gfp/: gfp.h  gfp_gen.c  gfp_gen.h  gfp_mont.c  gfp_mont.h
ecclib/protocols/: ecdsa.c  ecdsa.h  eckeygen.c  eckeygen.h  protocols.h
ecclib/utils/: param.c  param.h  rand.c  rand.h
tls/: CMakeLists.txt  aes128-cbc.cpp  aes128-cbc.h  aes128.cpp  aes128.h  ascon128.cpp  ascon128.h  attack.cpp  attack.h  basic-ae.h  basic-block-cipher.h  basic-hash.h  clocks.h  const-memcmp.cpp  const-memcmp.h  counter.cpp  counter.h  endian.h  hmac-sha1.cpp  hmac-sha1.h  hmac-sha2.cpp  hmac-sha2.h  lucky13.cpp  misc.h  mqlucky13.cpp  mqoracle.x86_64  mqprot.h  oracle.cpp  oracle.h  prf.cpp  prf.h  random.cpp  random.h  rdtsc.cpp  remote-oracle.cpp  sha1.cpp  sha1.h  sha2.cpp  sha2.h  tls-aes-cbc-hmac-sha1.cpp  (+4 more)
tls/ascon/: LICENSE.txt  api.h  ascon.c  crypto_aead.h
tls/challenges/: format  its2016g41-001.chal  its2016g41-001.chal.tsc.sol  its2016g41-001.rchal  its2016g41-001.rchal.sol  its2016g41-002.chal  its2016g41-002.chal.tsc.sol  its2016g41-002.rchal  its2016g41-002.rchal.sol  its2016g41-003.chal  its2016g41-003.chal.tsc.sol  its2016g41-003.rchal  its2016g41-003.rchal.sol  its2016g41-004.chal  its2016g41-004.chal.tsc.sol  its2016g41-004.rchal  its2016g41-004.rchal.sol  its2016g41-005.chal  its2016g41-005.chal.tsc.sol  its2016g41-005.rchal  its2016g41-005.rchal.sol  its2016g41-006.chal  its2016g41-006.chal.tsc.sol  its2016g41-006.rchal  its2016g41-006.rchal.sol  its2016g41-007.chal  its2016g41-007.chal.tsc.sol  its2016g41-007.rchal  its2016g41-007.rchal.sol  its2016g41-008.chal  its2016g41-008.chal.tsc.sol  its2016g41-008.rchal  its2016g41-008.rchal.sol  its2016g41-009.chal  its2016g41-009.chal.tsc.sol  its2016g41-009.rchal  its2016g41-009.rchal.sol  its2016g41-010.chal  its2016g41-010.chal.tsc.sol  its2016g41-010.rchal  (+33 more)
tls/tests/: CMakeLists.txt  ascon.cpp  cbc.cpp  helpers.h  hmac_sha1.cpp  hmac_sha2.cpp  nonce.cpp  prf.cpp  random.cpp  tls_ascon.cpp
tls/tests/data/: ascon-testcase-1.chal  ascon-testcase-1.sol  ascon-testcase-10.chal  ascon-testcase-10.sol  ascon-testcase-11.chal  ascon-testcase-11.sol  ascon-testcase-12.chal  ascon-testcase-12.sol  ascon-testcase-13.chal  ascon-testcase-13.sol  ascon-testcase-14.chal  ascon-testcase-14.sol  ascon-testcase-15.chal  ascon-testcase-15.sol  ascon-testcase-16.chal  ascon-testcase-16.sol  ascon-testcase-17.chal  ascon-testcase-17.sol  ascon-testcase-18.chal  ascon-testcase-18.sol  ascon-testcase-19.chal  ascon-testcase-19.sol  ascon-testcase-2.chal  ascon-testcase-2.sol  ascon-testcase-3.chal  ascon-testcase-3.sol  ascon-testcase-4.chal  ascon-testcase-4.sol  ascon-testcase-5.chal  ascon-testcase-5.sol  ascon-testcase-6.chal  ascon-testcase-6.sol  ascon-testcase-7.chal  ascon-testcase-7.sol  ascon-testcase-8.chal  ascon-testcase-8.sol  ascon-testcase-9.chal  ascon-testcase-9.sol
utils/: io.h
